<resources>
    <string name="app_name">Играем с пользой</string>
    <string name="games_activity">Список игр</string>
    <string name="game_content">Содержание игры</string>
    <string name="action_favorites">Избранное</string>
    <string name="action_add_my">Добавить игру</string>

    <string name="action_cat_0">От 0 до 3 месяцев</string>
    <string name="action_cat_1">От 3 до 6 месяцев</string>
    <string name="action_cat_2">От 6 до 9 месяцев</string>
    <string name="action_cat_3">От 9 до 12 месяцев</string>
    <string name="action_cat_4">От 1 года до 1.5 лет</string>
    <string name="action_cat_5">От 1.5 до 2 лет</string>
    <string name="action_cat_6">От 2 до 3 лет</string>
    <string name="favorites_icon">favorites icon</string>
    <string name="game_description">game description</string>
    <string name="title_activity_custom_game">CustomGameActivity</string>
    <string name="title_activity_other_game">OtherGameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favorite_list">Избранное</string>
    <string name="menu_about">О приложении</string>
    <string name="dialog_about_us">Надеюсь приложение с играми-развивашками Вам понравилось, оно сделано с душой 😊.\nПостараюсь пополнять список игр и вносить правки по вашим пожеланиям.\nУ приложения всего один разработчик - мама в декрете 🙃, так что будьте терпеливы.</string>
    <string name="dialog_about_us_title">О приложении</string>
</resources>
