<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.mvkoshenkova.upgradeyourkid.ui.MainActivity"
    tools:showIn="@layout/activity_main">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGames"
                android:tag="FROM_0_TO_3_MONTH"
                android:text="@string/action_cat_0"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="36dp"
                android:background="@drawable/category_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGames"
                android:tag="FROM_3_TO_6_MONTH"
                android:text="@string/action_cat_1"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="95dp"
                android:background="@drawable/category_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGames"
                android:tag="FROM_6_TO_9_MONTH"
                android:text="@string/action_cat_2"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="158dp"
                android:background="@drawable/category_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGames"
                android:tag="FROM_9_TO_12_MONTH"
                android:text="@string/action_cat_3"
                tools:layout_editor_absoluteX="123dp"
                tools:layout_editor_absoluteY="229dp"
                android:background="@drawable/category_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGames"
                android:tag="FROM_12_TO_18_MONTH"
                android:text="@string/action_cat_4"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="295dp"
                android:background="@drawable/category_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGames"
                android:tag="FROM_18_TO_24_MONTH"
                android:text="@string/action_cat_5"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="364dp"
                android:background="@drawable/category_button"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>
